[gd_scene load_steps=12 format=2]

[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/typing_complete_screen.gd" type="Script" id=1]
[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/window_and_button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/zh-cn.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://G2_Background/ling194 pt4/G5_Assessment/Typing Segment Score Screen/window_and_button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/window_title_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/test_theme.tres" type="Theme" id=6]
[ext_resource path="res://G5_Assessment/Typing Segment Score Screen/Glossary.gd" type="Script" id=7]
[ext_resource path="res://G4_Typing/assets/Vocab/Sound_2/72ñuñu.wav" type="AudioStream" id=8]
[ext_resource path="res://G5_Assessment/Assets/Resized Vocab/72Abeja.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="TypingScoreControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="WindowScreen" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 511, 237 )
custom_fonts/title_font = ExtResource( 5 )
popup_exclusive = true
window_title = "Typing Complete"
__meta__ = {
"_edit_lock_": true
}

[node name="WindowText" type="Label" parent="WindowScreen"]
anchor_left = 0.257813
anchor_top = 0.26
anchor_right = 0.744141
anchor_bottom = 0.536667
text = "Your score is...
/"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreLabel" type="Label" parent="WindowScreen"]
anchor_left = 0.347656
anchor_top = 0.403333
anchor_right = 0.466797
anchor_bottom = 0.536667
grow_horizontal = 2
grow_vertical = 2
text = "100"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TotalLabel" type="Label" parent="WindowScreen"]
anchor_left = 0.523438
anchor_top = 0.403333
anchor_right = 0.662109
anchor_bottom = 0.536667
grow_horizontal = 2
grow_vertical = 2
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AssessmentButton" type="Button" parent="WindowScreen"]
anchor_left = 0.175781
anchor_top = 0.69
anchor_right = 0.476563
anchor_bottom = 0.776667
margin_bottom = -1.0
custom_fonts/font = ExtResource( 2 )
text = "Go to Assessment"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RetryButton" type="Button" parent="WindowScreen"]
anchor_left = 0.634766
anchor_top = 0.69
anchor_right = 0.816406
anchor_bottom = 0.776667
margin_bottom = -1.0
custom_fonts/font = ExtResource( 2 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GlossaryButton" type="Button" parent="WindowScreen"]
margin_left = 381.0
margin_top = 13.0
margin_right = 482.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Glossary"

[node name="Glossary" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.501
anchor_top = 0.5
anchor_right = 0.501
anchor_bottom = 0.5
margin_left = -256.72
margin_top = -150.0
margin_right = 255.28
margin_bottom = 150.0
custom_fonts/title_font = ExtResource( 5 )
window_title = "Glossary"
script = ExtResource( 7 )
GlossaryOption_path = NodePath("GlossaryOption")

[node name="TextureRect" type="TextureRect" parent="Glossary"]
anchor_left = 0.5
anchor_top = 0.52
anchor_right = 0.5
anchor_bottom = 0.52
margin_left = -70.0
margin_top = -50.0
margin_right = 70.0
margin_bottom = 50.0
texture = ExtResource( 9 )

[node name="AudioButton" type="Button" parent="Glossary"]
anchor_left = 0.5
anchor_top = 0.79
anchor_right = 0.5
anchor_bottom = 0.79
margin_left = -50.0
margin_top = -16.0
margin_right = 50.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Play Audio"

[node name="GlossaryOption" type="OptionButton" parent="Glossary"]
anchor_left = 0.5
anchor_top = 0.267
anchor_right = 0.5
anchor_bottom = 0.267
margin_left = -70.0
margin_top = -15.0
margin_right = 70.0
margin_bottom = 15.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )

[node name="VocabAudio" type="AudioStreamPlayer" parent="Glossary"]
stream = ExtResource( 8 )
volume_db = 5.0

[connection signal="modal_closed" from="WindowScreen" to="." method="_on_WindowScreen_modal_closed"]
[connection signal="pressed" from="WindowScreen/AssessmentButton" to="." method="_on_AssessmentButton_pressed"]
[connection signal="pressed" from="WindowScreen/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="WindowScreen/GlossaryButton" to="." method="_on_GlossaryButton_pressed"]
[connection signal="pressed" from="Glossary/AudioButton" to="Glossary" method="_on_AudioButton_pressed"]
[connection signal="item_selected" from="Glossary/GlossaryOption" to="Glossary" method="_on_GlossaryOption_item_selected"]
